Some layout changes in issue covers

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body {
 
 #arrow4:hover {
   transform: translateY(-10px);
-} 
+}
 
 
 
@@ -79,6 +79,10 @@ body {
 
 .navbar {
   height: 80pt;
+}
+
+.issueCoverContainer {
+  width: 35%;
 }
 
 
@@ -129,4 +133,36 @@ aside { /* Side notes in the text of the articles */
   font-size: larger;
   border: 1px;
   border-style: solid none;
+}
+
+
+
+
+@media (min-width: 768px) {
+    .container-small {
+        width: 300px;
+    }
+    .container-large {
+        width: 970px;
+    }
+}
+@media (min-width: 992px) {
+    .container-small {
+        width: 500px;
+    }
+    .container-large {
+        width: 1170px;
+    }
+}
+@media (min-width: 1200px) {
+    .container-small {
+        width: 700px;
+    }
+    .container-large {
+        width: 1500px;
+    }
+}
+
+.container-small, .container-large {
+    max-width: 100%;
 }
